// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps returns the right keys 1`] = `
Object {
  "fetchCommunityTopics": [Function],
  "setTopicSubscribe": [Function],
}
`;

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "community": null,
  "network": false,
  "pending": true,
  "topics": Array [],
}
`;

exports[`mergeProps sets up functions 1`] = `
Object {
  "community": Object {
    "id": 132,
  },
  "fetchCommunityTopics": [Function],
  "goToComingSoon": [Function],
  "goToTopic": [Function],
  "navigation": Object {
    "navigate": [Function],
  },
  "setTopicSubscribe": [Function],
  "shouldRedirect": false,
}
`;
